# unigo

./: .gitignore  README.md  pyproject.toml  setup.py
native_obo/: __init__.py  io_obo.py  statistics.py  tree.py
notebooks/: christian_tmt_proteome.ipynb  test_pwas.ipynb  test_pwas_GL.ipynb  unigo_service.ipynb
notebooks/.ipynb_checkpoints/: christian_tmt_proteome-checkpoint.ipynb
notebooks/data/: proteins.json
src/unigo/: __init__.py  __main__.py  api.py  cli.py  pwas.py  stat_utils.py  tree.py  utils.py
src/unigo/api/: data_objects.py  io.py  pwas.py  store.py
src/unigo/api/store/: __init__.py  client.py
src/unigo/api/store/cache/: __init__.py  local.py  redis.py
src/unigo/repl/: __init__.py  helpers.py
src/unigo/repl/commands/: __init__.py  connect.py  mutators.py  viewers.py
src/unigo/tree/: __init__.py
unigo/: __init__.py  __main__.py  command_line.py  stat_utils.py  utils.py
unigo/api/: data_objects.py  io.py  pwas.py  pwas_compute.py
unigo/api/store/client/: viewers.py
unigo/cluster_tree/: __init__.py
unigo/repl/commands/: mutators.py  viewers.py
unigo/stats/: ora.py
unigo/test/: pwas.py  test_time.py.lprof
unigo/tree/: __init__.py  heap.py  node.py  ora_results.py
unigo/utils/: api.py  uniprot.py
