[tool.poetry]
name = "unigo"
version = "2.0.3"
description = ""
authors = ["glaunay <pitooon@gmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requires = "^0.10.2"
scipy = "^1.8.0"
docopt = "^0.6.2"
marshmallow = "^3.14.1"
Flask = "^2.0.2"
requests = "^2.27.1"
pydantic = "^1.10.1"
notebook = "^6.4.12"
pyproteinsext = "^3.0.3"
line-profiler = "^3.5.1"
Cython = "^0.29.32"
wheel = "^0.37.1"
Owlready2 = "^0.38"
pyrediscore = "^1.0.0"
uniprot-redis = "^1.2.0"
networkx = "^3.2"

[tool.poetry.dev-dependencies]
notebook = "^6.5.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
